...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login1">

    <ImageView
        android:id="@+id/sbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/status_bar"
        android:layout_alignParentTop="true"
        >
    </ImageView>
...
        android:layout_below="@id/dp"

        />


    <TextView
        android:id="@+id/Loginbtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rect_button"
        android:text="Log in"
        android:textStyle="bold"
        android:textAlignment="center"
...
