...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/create"
            android:scaleType="center"
            />
        <ImageView
            android:id="@+id/likes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/like"
            app:tint="@color/theme"
            android:scaleType="center"
...
